--- a/Home.html
+++ b/Home.html
@@ -24,74 +24,25 @@
 
     <main>
         <section class="left-section">
-            <h2>Information</h2>
             <ul>
-                <li>Username</li>
-                <li>Content </li>
-                <li>Engagement</li>
+            <li>Home</li>
+            <li>Explore</li>
+            <li>Message</li>
+            <li>Bookmarks</li>
+            <li>List</li>
+            <li>Setting</li>
+
             </ul>
         </section>
 
         <section class="middle-section">
-            <h2>Content Details</h2>
-            <table>
-                <thead>
-                    <tr>
-                        <th>Post</th>
-                        <th>Type</th>
-                        <th> Likes</th>
-                        <th> Comments</th>
-                        <th> Shares</th>
-                        <th> Time</th>
-                        <th> Revenue</th>
-                        <th> API keys</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>Apple</td>
-                        <td>Video</td>
-                        <td>25.5K</td>
-                        <td>10.2k</td>
-                        <td>5.1k</td>
-                        <td> 1:20</td>
-                        <td>2000$</td> 
-                        <td>22C123@5</td> 
-                    </tr>
-                    <tr>
-                        <td>Xiaomi</td>
-                        <td>Text</td>
-                        <td>10.5K</td>
-                        <td>10.2k</td>
-                        <td>2.1k</td>
-                        <td> 11:35</td>
-                        <td>25350$</td> 
-                        <td>@3C123IU@s</td> 
-                    </tr>
-                    <tr>
-                        <td>Huawei</td>
-                        <td>Image</td>
-                        <td>10.2K</td>
-                        <td>11.2k</td>
-                        <td>2.5k</td>
-                        <td> 5:20</td>
-                        <td>5000$</td> 
-                        <td>ahC123@s</td> 
-                    </tr>
-                    <tr>
-                        <td>Realme</td>
-                        <td>Video</td>
-                        <td>20.5K</td>
-                        <td>12.2k</td>
-                        <td>2.1k</td>
-                        <td> 10:02</td>
-                        <td>5520$</td> 
-                        <td>abC123@f2</td> 
-                    </tr>
-                </tbody>
-            </table>
-            <br>
-            <img src="imp.png" alt="Img" height="400",width="400">
+           
+            <img src="samsung.png" alt="Img" height="400",width="400"><br>
+            <img src="prothomAlo.png" alt="Img" height="400",width="400"><br>
+            <img src="car.png" alt="Img" height="400",width="400"><br>
+            <img src="apple.png" alt="Img" height="400",width="400"><br>
+            <img src="xiaomi.png" alt="Img" height="400",width="400"><br>
+            
         </section>
 
         <section class="right-section">
